k8s_deployment_code/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name:  app-namespace1
  labels:
    env: dev
    owner: Teranteks
