k8s_deployment_code/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-pod-service
  namespace: app-namespace
  labels:
    env: dev
    owner: Teranteks

spec:
  selector:
    project: k8s-app
  ports:
    - name: k8s-app-listener
      protocol: TCP
      port: 5000
      targetPort: 5000
  type: LoadBalancer
