k8s_deployment_code/ingress_rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  namespace: app-namespace
  labels:
    env: dev
    owner: Teranteks
spec:
  defaultBackend:
    service:
      name: app-pod-service
      port:
        number: 5000
  rules:
  - host: pyapp.com
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: app-pod-service
              port:
                number: 5000

        - pathType: Prefix
          path: /healthcheck
          backend:
            service:
              name: app-pod-service
              port:
                number: 5000
